// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot for resistance: undefined 1`] = `
<div
  class="ESeries"
>
  <table
    class="table table-sm table-striped table-hover"
  >
    <thead>
      <tr>
        <th>
          E-Series 
        </th>
        <th>
          Tolerances [%]
        </th>
        <th>
          Less
        </th>
        <th>
          Equal
        </th>
        <th>
          Greater
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          E48
        </td>
        <td>
          2
          
        </td>
        <td>
          <a
            href="#"
          >
            9.09
          </a>
        </td>
        <td>
          —
        </td>
        <td>
          <a
            href="#"
          >
            9.53
          </a>
        </td>
      </tr>
      <tr>
        <td>
          E96
        </td>
        <td>
          <a
            href="#"
          >
            1
          </a>
          
        </td>
        <td>
          <a
            href="#"
          >
            9.09
          </a>
        </td>
        <td>
          9.31
        </td>
        <td>
          <a
            href="#"
          >
            9.53
          </a>
        </td>
      </tr>
      <tr>
        <td>
          E192
        </td>
        <td>
          <a
            href="#"
          >
            .5
          </a>
          , 
          <a
            href="#"
          >
            .25
          </a>
          , 
          <a
            href="#"
          >
            .1
          </a>
          , 
          <a
            href="#"
          >
            .05
          </a>
          
        </td>
        <td>
          <a
            href="#"
          >
            9.2
          </a>
        </td>
        <td>
          9.31
        </td>
        <td>
          <a
            href="#"
          >
            9.42
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`matches snapshot for resistance: undefined 2`] = `
<div
  class="ESeries"
>
  <table
    class="table table-sm table-striped table-hover"
  >
    <thead>
      <tr>
        <th>
          E-Series 
        </th>
        <th>
          Tolerances [%]
        </th>
        <th>
          Less
        </th>
        <th>
          Equal
        </th>
        <th>
          Greater
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          E12
        </td>
        <td>
          <a
            href="#"
          >
            10
          </a>
          
        </td>
        <td>
          —
        </td>
        <td>
          1
        </td>
        <td>
          <a
            href="#"
          >
            1.2
          </a>
        </td>
      </tr>
      <tr>
        <td>
          E24
        </td>
        <td>
          5
          
        </td>
        <td>
          —
        </td>
        <td>
          1
        </td>
        <td>
          <a
            href="#"
          >
            1.1
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
